; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_4272.c_open_socket.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_4272.c_open_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AF_INET = common dso_local global i32 0, align 4
@SOCK_RAW = common dso_local global i32 0, align 4
@IPPROTO_UDP = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"Error: open_socket: Unable to open socket.\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@IPPROTO_IP = common dso_local global i32 0, align 4
@IP_HDRINCL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [40 x i8] c"Error: open_socket: setsockopt failed.\0A\00", align 1
@SO_BROADCAST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @open_socket() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 1, i32* %2, align 4
  %4 = bitcast i32* %2 to i8*
  store i8* %4, i8** %3, align 8
  %5 = load i32, i32* @AF_INET, align 4
  %6 = load i32, i32* @SOCK_RAW, align 4
  %7 = load i32, i32* @IPPROTO_UDP, align 4
  %8 = call i32 @socket(i32 %5, i32 %6, i32 %7)
  store i32 %8, i32* %1, align 4
  %9 = load i32, i32* %1, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %0
  %12 = load i32, i32* @stderr, align 4
  %13 = call i32 @fprintf(i32 %12, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  %14 = load i32, i32* @EXIT_FAILURE, align 4
  %15 = call i32 @exit(i32 %14) #3
  unreachable

16:                                               ; preds = %0
  %17 = load i32, i32* %1, align 4
  %18 = load i32, i32* @IPPROTO_IP, align 4
  %19 = load i32, i32* @IP_HDRINCL, align 4
  %20 = load i8*, i8** %3, align 8
  %21 = call i64 @setsockopt(i32 %17, i32 %18, i32 %19, i8* %20, i32 4)
  %22 = icmp slt i64 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %16
  %24 = load i32, i32* @stderr, align 4
  %25 = call i32 @fprintf(i32 %24, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0))
  %26 = load i32, i32* @EXIT_FAILURE, align 4
  %27 = call i32 @exit(i32 %26) #3
  unreachable

28:                                               ; preds = %16
  %29 = load i32, i32* %1, align 4
  %30 = load i32, i32* @IPPROTO_IP, align 4
  %31 = load i32, i32* @SO_BROADCAST, align 4
  %32 = load i8*, i8** %3, align 8
  %33 = call i64 @setsockopt(i32 %29, i32 %30, i32 %31, i8* %32, i32 4)
  %34 = icmp slt i64 %33, 0
  br i1 %34, label %35, label %40

35:                                               ; preds = %28
  %36 = load i32, i32* @stderr, align 4
  %37 = call i32 @fprintf(i32 %36, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0))
  %38 = load i32, i32* @EXIT_FAILURE, align 4
  %39 = call i32 @exit(i32 %38) #3
  unreachable

40:                                               ; preds = %28
  %41 = load i32, i32* %1, align 4
  ret i32 %41
}

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i64 @setsockopt(i32, i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
